<resources>
    <string name="app_name">午夜神器</string>

    <string name="tab_community">社区</string>
    <string name="tab_mall">商城</string>
    <string name="tab_message">消息</string>
    <string name="tab_discover">发现</string>
    <string name="tab_personal">我的</string>

    <!--我的-->
    <string name="personal_recharge_str">我的金币</string>
    <string name="personal_myorder_str">我的订单</string>
    <string name="personal_task_str">每日任务</string>
    <string name="personal_maillist_str">通讯录邀请</string>
    <string name="personal_service_str">联系客服</string>
    <string name="personal_service_phone_str">400-820-5310</string>

    <string name="start_session_record">我发起了白板演示</string>
    <string name="session_end_record">白板演示已结束</string>

    <string name="coin">午夜神器金币由“当前可用金币”和“可兑换金币”两部分组成，“可兑换金币”包含在“当前可用金币”中。午夜神器金币系统详解如下：

\n\n1、金币获取途径：

\n\n“当前可用金币”赚取途径：

\n\n升级：每次等级提升即可领取一定数量的金币，最高20000金币。
\n活动：午夜神器会不定期举办各式各样的活动，送出大量的金币。
\n充值：午夜神器提供金币充值功能，冲的越多，送的越多。
\n会员：购买会员后除了特权、经验外，还赠送大量的金币。
\n购物：购物支付成功后即可获得少量的金币奖励。
\n赚取：夜友们在使用午夜神器过程中可通过帖子被打赏、收到礼物等方式赚取金币。

\n\n“可兑换金币”：在使用午夜神器过程中赚取的金币即为“可兑换金币”。认证女夜友可通过私聊、帖子被打赏、收到礼物等方式赚取，其他夜友可通过帖子被打赏、收到礼物等方式赚取。

\n\n2、金币用途：

\n\n“当前可用金币”可用来体验私信、打赏、送礼、修改昵称等所有功能。

\n\n3、金币使用规则

\n\n使用午夜神器过程中优先消耗“当前可用金币”中的不可兑换金币，当不可兑换金币不足时，开始消耗可兑换金币，直至耗完为止。友情提醒，“当前可用金币”不足时 ，将影响午夜神器部分功能的使用哦！

</string>

</resources>
