<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dimen_dp_15"
        android:background="@color/color_line" />

    <LinearLayout
        android:id="@+id/personal_recharge_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_dp_50"
        android:background="@drawable/white_hollow_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_dp_15"
        android:paddingRight="@dimen/dimen_dp_15">

        <ImageView
            android:layout_width="@dimen/dimen_dp_30"
            android:layout_height="@dimen/dimen_dp_30"
            android:src="@mipmap/persoanl_recharge_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_dp_15"
            android:layout_weight="1"
            android:text="@string/personal_recharge_str"
            android:textColor="@color/personal_item_tx"
            android:textSize="@dimen/dimen_sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_dp_15"
            android:src="@mipmap/right_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/dimen_dp_15"
            android:background="@color/color_line" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/personal_myorder_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_dp_50"
        android:background="@drawable/white_hollow_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_dp_15"
        android:paddingRight="@dimen/dimen_dp_15">

        <ImageView
            android:layout_width="@dimen/dimen_dp_30"
            android:layout_height="@dimen/dimen_dp_30"
            android:src="@mipmap/personal_order_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_dp_15"
            android:layout_weight="1"
            android:text="@string/personal_myorder_str"
            android:textColor="@color/personal_item_tx"
            android:textSize="@dimen/dimen_sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_dp_15"
            android:src="@mipmap/right_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/dimen_dp_15"
            android:background="@color/color_line" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/personal_task_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_dp_50"
        android:background="@drawable/white_hollow_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_dp_15"
        android:paddingRight="@dimen/dimen_dp_15">

        <RelativeLayout
            android:layout_width="@dimen/dimen_dp_35"
            android:layout_height="@dimen/dimen_dp_30">

            <ImageView
                android:layout_width="@dimen/dimen_dp_30"
                android:layout_height="@dimen/dimen_dp_30"
                android:src="@mipmap/personal_task_ic" />

            <ImageView
                android:id="@+id/personal_task_iv"
                android:layout_width="@dimen/dimen_dp_5"
                android:layout_height="@dimen/dimen_dp_5"
                android:visibility="invisible"
                android:layout_alignParentRight="true"
                android:src="@mipmap/dote_pressed" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_dp_10"
            android:layout_weight="1"
            android:text="@string/personal_task_str"
            android:textColor="@color/personal_item_tx"
            android:textSize="@dimen/dimen_sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_dp_15"
            android:src="@mipmap/right_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/dimen_dp_15"
            android:background="@color/color_line" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/personal_maillist_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_dp_50"
        android:background="@drawable/white_hollow_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_dp_15"
        android:paddingRight="@dimen/dimen_dp_15">

        <ImageView
            android:layout_width="@dimen/dimen_dp_30"
            android:layout_height="@dimen/dimen_dp_30"
            android:src="@mipmap/personal_addlist_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_dp_15"
            android:layout_weight="1"
            android:text="@string/personal_maillist_str"
            android:textColor="@color/personal_item_tx"
            android:textSize="@dimen/dimen_sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_dp_15"
            android:src="@mipmap/right_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/dimen_dp_15"
            android:background="@color/color_line" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/personal_service_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_dp_50"
        android:background="@drawable/white_hollow_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_dp_15"
        android:paddingRight="@dimen/dimen_dp_15">

        <ImageView
            android:layout_width="@dimen/dimen_dp_30"
            android:layout_height="@dimen/dimen_dp_30"
            android:src="@mipmap/personal_service_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_dp_15"
            android:layout_weight="1"
            android:text="@string/personal_service_str"
            android:textColor="@color/personal_item_tx"
            android:textSize="@dimen/dimen_sp_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_dp_15"
            android:layout_marginRight="@dimen/dimen_dp_15"
            android:text="@string/personal_service_phone_str"
            android:textColor="@color/personal_item_tx"
            android:textSize="@dimen/dimen_sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_dp_15"
            android:src="@mipmap/right_arrow" />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_line" />

</LinearLayout>